--- a/.env.dist
+++ b/.env.dist
@@ -1,8 +1,10 @@
 # Username to login
-USER_NAME=admin@example.com
-
+USER_NAME=
 # Password to login
-USER_PASSWORD=admin123
+USER_PASSWORD=
 
 #URL to sales portal
-SALES_PORTAL_URL="http://localhost:8585/#/"
+SALES_PORTAL_URL=
+
+#URL to sales portal backend
+SALES_PORTAL_API_URL=
