--- a/package.json
+++ b/package.json
@@ -28,14 +28,18 @@
   "devDependencies": {
     "@playwright/test": "^1.56.1",
     "@types/ajv": "^0.0.5",
+    "@types/bson": "^4.0.5",
     "@types/dotenv": "^6.1.1",
     "@types/lodash": "^4.17.20",
+    "@types/moment": "^2.11.29",
     "@types/node": "^24.8.1"
   },
   "dependencies": {
     "@faker-js/faker": "^10.1.0",
     "ajv": "^8.17.1",
+    "bson": "^7.0.0",
     "dotenv": "^17.2.3",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1"
   }
 }
