--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test:ui": "npx playwright test",
+    "test": "npx playwright test",
+    "test:ui:regression": "npx playwright test --project=sales-portal-ui --grep @regression|@smoke",
+    "test:ui:smoke": "npm run test -- --project=sales-portal-ui --grep @smoke",
     "ui-mode": "npx playwright test --ui",
+    "html-report-open": "npx playwright show-report",
+    "allure-report": "allure generate allure-results -o allure-report --clean",
+    "allure-report-open": "npm run allure-report && allure open allure-report",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --config .prettierrc src/**/*.ts --check src/",
@@ -32,11 +37,13 @@
     "@types/dotenv": "^6.1.1",
     "@types/lodash": "^4.17.20",
     "@types/moment": "^2.11.29",
-    "@types/node": "^24.8.1"
+    "@types/node": "^24.8.1",
+    "allure-playwright": "^3.4.2"
   },
   "dependencies": {
     "@faker-js/faker": "^10.1.0",
     "ajv": "^8.17.1",
+    "allure-commandline": "^2.34.1",
     "bson": "^7.0.0",
     "dotenv": "^17.2.3",
     "lodash": "^4.17.21",
